--- a/src/app/cars/list/list.component.html
+++ b/src/app/cars/list/list.component.html
@@ -10,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let car of cars">
+    <tr *ngFor="let car of cars | async">
       <td>{{car.id}}</td>
       <td>{{car.make}}</td>
       <td>{{car.model}}</td>
